# tastebase

./: .gitignore  CLAUDE.md  Makefile  README.md  futures.md  platform.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/mcp-server/: Cargo.toml
backend/mcp-server/src/: main.rs
backend/og-server/: Cargo.toml
backend/og-server/src/: main.rs
backend/processing/: Cargo.toml
backend/processing/src/: extraction.rs  llm.rs  main.rs  voice.rs
backend/recipes-api/: Cargo.toml
backend/recipes-api/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: auth.rs  db.rs  error.rs  lib.rs  media.rs  sanitize.rs  types.rs  validate.rs
backend/tastings-api/: Cargo.toml
backend/tastings-api/src/: main.rs
db/migrations/: 001_create_users.sql  002_create_tastings.sql  003_create_recipes.sql  004_ingredient_short_name.sql  005_nullable_user_id.sql  006_recipe_reviews_and_images.sql  007_drop_cover_image_url.sql  008_drop_image_sort_order.sql  009_linked_recipe_ingredients.sql  010_recipe_versioning.sql
db/migrations/rollback/: 001_create_users.sql  002_create_tastings.sql  003_create_recipes.sql  004_ingredient_short_name.sql  005_nullable_user_id.sql  006_recipe_reviews_and_images.sql  007_drop_cover_image_url.sql
db/migrations/seed/: 001_migrate_dynamo.sql
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: config.js
frontend/src/: App.css  App.tsx  api.ts  auth.ts  config.ts  index.css  types.ts  vite-env.d.ts
frontend/src/components/: DeleteModal.tsx  Header.tsx  RecipeDetail.tsx  RecipeDetailHelpers.tsx  RecipeList.tsx  RecipeMedia.tsx  SearchBar.tsx  TastingCard.tsx  TastingForm.tsx  TastingFormSections.tsx  ViewModal.tsx  display.tsx
frontend/src/hooks/: useAuth.ts  useCamera.ts  useFilters.ts  useRecipes.ts  useRecorder.ts  useTastings.media.ts  useTastings.ts
infrastructure/terraform/: alb.tf  cognito.tf  dns.tf  frontend.tf  lambdas.tf  locals.tf  main.tf  media.tf  outputs.tf  ssm.tf
scripts/: deploy.sh  migrate-dynamo.jq  migrate-dynamo.sh
