[workspace]
resolver = "2"
members = [
    "shared",
    "tastings-api",
    "recipes-api",
    "mcp-server",
    "processing",
    "og-server",
]

[workspace.dependencies]
axum = "0.8"
lambda_http = "0.14"
lambda_runtime = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "rust_decimal"] }
tokio = { version = "1", features = ["macros"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "macros"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-lambda = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-transcribe = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "2"
shared = { path = "shared" }
