[package]
name = "og-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "og-server"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lambda_http = { workspace = true }
axum = { workspace = true }
