[package]
name = "processing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "processing"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-transcribe = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
regex = "1"
