[package]
name = "tastings-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tastings-api"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
axum = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
aws-config = { workspace = true }
aws-sdk-lambda = { workspace = true }
